<resources>

    <string name="app_name">Marcador Truco</string>

    <string name="equipe1">Equipe 1</string>
    <string name="equipe2">Equipe 2</string>

    <string name="historico">Histórico</string>
    <string name="informar_nomes">Informar Nomes</string>
    <string name="zerar_historico">Zerar Histórico</string>

    <string name="voltar">Voltar</string>
    <string name="confirmar">Confirmar</string>

    <string name="vitorias">vitórias</string>

    <string name="nome_equipe_1">Nome da Equipe 1</string>
    <string name="nome_equipe_2">Nome da Equipe 2</string>
    <string name="inf_nomes">Inf. Nomes</string>
    <string name="zerar_hist_rico">Zerar Histórico</string>
    <string name="nome_da_equipe_1">Nome da Equipe 1</string>
    <string name="nome_da_equipe_2">Nome da Equipe 2</string>
    <string name="equipe_2_0_vit_rias">Equipe 2: 0 vitórias</string>
    <string name="equipe_1_0_vit_rias">Equipe 1: 0 vitórias</string>

    <string name="historico_zerado">Histórico zerado com sucesso!</string>

    <string name="fim_partida">Fim da partida</string>

    <string name="ok">OK</string>

    <string name="equipe_venceu">%1$s venceu!</string>
    <string name="copyright">© Alex Cardoso Bento – 2026</string>

</resources>